# mcap_mcp_server

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: .gitignore  readme.md  requirements.txt
doc/reference/: README.md
doc/source/: architecture.md  conf.py  configuration.md  decoders.md  index.md  tools.md
doc/source/_static/: custom.css  custom.js
doc/specs/: spec-load-performance.md  spec-mcap-mcp-server.md
src/mcap_mcp_server/: __init__.py  __main__.py  config.py  decoder_registry.py  flatten.py  mcap_reader.py  query_engine.py  recording_index.py  server.py
src/mcap_mcp_server/decoders/: __init__.py  base.py  flatbuffer_decoder.py  json_decoder.py  protobuf_decoder.py  ros1_decoder.py  ros2_decoder.py
tests/: conftest.py  generate_fixtures.py  test_config.py  test_decoder_registry.py  test_decoders.py  test_encoded_fixtures.py  test_flatbuffer_decoder.py  test_flatten.py  test_json_decoder.py  test_main.py  test_mcap_reader.py  test_protobuf_decoder.py  test_query_engine.py  test_query_engine_advanced.py  test_recording_index.py  test_ros1_decoder.py  test_ros2_decoder.py  test_server_integration.py  test_server_new_tools.py
tests/fixtures/: battery.bfbs  flatbuffer.mcap  multi_topic.mcap  protobuf.mcap  ros1.mcap  ros2.mcap  simple.mcap
